java: edited encryption program